# github-i3-notifier

./: README.md  notification.py  pyproject.toml
