[tool.poetry]
name = "github-i3-notifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "github_i3_notifier"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
notify-py = "^0.3.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
